# GladeToCBuilderDemo

./: CMakeLists.txt  README.md  aboutdialog1_gui.c  aboutdialog1_gui.h  control.c  demo-builder.glade  demo1_main.c  window1.c  window1.h  window1_gui.c  window1_gui.h
